syntax = "proto3";
package vetuser;

service VetUserService {
    rpc getUser(VetUserId) returns (VetUser) {}
}

message VetUserId {
    string vid = 1;
}

message VetUser {
    string uid = 1;
    string vid = 2;
    int32 gender = 3;  // 0 = Divers - 1 = Male - 2 = Female
    string firstName = 4;
    string lastName = 5;
    int32 isEmployee = 6; // 0 = false, 1 = true
    int32 dept = 7;
}